Feature(#26) : 문제 생성 로직 배치 처리, 로깅 개선